@@ -21,6 +21,7 @@ t/20attributes.t
 t/21internal.t
 t/22processes.t
 t/23clean.t
+t/24backups.t
 t/50logging.t
 t/59cleanup.t
 t/90podtest.t
